# smaug

./: CMakeLists.txt  Dockerfile  build.ps1  docker-compose.yml
paradox/area/: air.are  alias.tmp  allow.txt  arachnos.are  area.lst  arena.are  asgard.are  astral.are  atlantis.are  avalan.are  camelot.are  canyon.are  catacomb.are  chang.not.old  chapel.are  city.are  clanha.are  dark.are  daycare.are  divsouls.are  draconia.are  drakyri.are  dream.are  drow.are  dryad.are  dryad1.are  dwarven.are  dylan.are  eastern.are  fanatics.are  forbid.are  galaxy.are  gnome.are  grave.are  group.are  grove.are  gtoshi.are  haon.are  help.are  hitower.are  (+52 more)
paradox/doc/: dsmobdice.txt  dsolcguide.txt  pr.txt  wiz.txt
paradox/log/: help.txt
paradox/player/: Obsidian
paradox/src/: BALANCE  Changes  Makefile  TODO  act_comm.c  act_enter.c  act_info.c  act_move.c  act_obj.c  act_wiz.c  auction.c  banks.c  clans.c  comm.c  comp  const.c  copyover.c  daequest  db.c  db2.c  effects.c  fight.c  forget.c  handler.c  healer.c  interp.c  interp.h  magic.c  magic.h  magic2.c  mdice.c  mdice.h  mem.c  merc.h  mob_cmds.c  note.c  olc.c  olc.h  olc_act.c  olc_mpcode.c  (+13 more)
