cmake_minimum_required(VERSION 3.10)
project(smaug C)

set(CMAKE_C_STANDARD 11)

include_directories(paradox/src)

add_executable(smaug
        paradox/src/act_comm.c
        paradox/src/act_enter.c
        paradox/src/act_info.c
        paradox/src/act_move.c
        paradox/src/act_obj.c
        paradox/src/act_wiz.c
        paradox/src/alias.c
        paradox/src/auction.c
        paradox/src/ban.c
        paradox/src/banks.c
        paradox/src/bit.c
        paradox/src/clans.c
        paradox/src/class.c
        paradox/src/comm.c
        paradox/src/const.c
        paradox/src/copyover.c
        paradox/src/curse.c
        paradox/src/db.c
        paradox/src/db.h
        paradox/src/db2.c
        paradox/src/effects.c
        paradox/src/fight.c
        paradox/src/flags.c
        paradox/src/forget.c
        paradox/src/handler.c
        paradox/src/healer.c
        paradox/src/include.h
        paradox/src/interp.c
        paradox/src/interp.h
        paradox/src/lookup.c
        paradox/src/lookup.h
        paradox/src/magic.c
        paradox/src/magic.h
        paradox/src/magic2.c
        paradox/src/mdice.c
        paradox/src/mdice.h
        paradox/src/mem.c
        paradox/src/merc.h
        paradox/src/mob_cmds.c
        paradox/src/mob_cmds.h
        paradox/src/mob_prog.c
        paradox/src/music.c
        paradox/src/music.h
        paradox/src/note.c
        paradox/src/olc.c
        paradox/src/olc.h
        paradox/src/olc_act.c
        paradox/src/olc_mpcode.c
        paradox/src/olc_save.c
        paradox/src/quest.c
        paradox/src/recycle.c
        paradox/src/recycle.h
        paradox/src/repent.c
        paradox/src/save.c
        paradox/src/scan.c
        paradox/src/sighand.c
        paradox/src/sign.c
        paradox/src/skills.c
        paradox/src/special.c
        paradox/src/string.c
        paradox/src/tables.c
        paradox/src/tables.h
        paradox/src/telnet.h
        paradox/src/update.c
        paradox/src/wizlist.c)
